--- a/index.html
+++ b/index.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <title>Brain Training Games</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>BrainTooster Game</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🧠 Brain Boost Games</h1>
-  <p>Play games to improve memory, focus, and thinking skills!</p>
-
-  <div id="game-list">
-    <a href="#">Game 1 (Coming Soon)</a>
-    <!-- You can link real game files here later -->
-  </div>
-
-  <footer>
-    <p>&copy; 2025 BrainGames. All rights reserved.</p>
-  </footer>
-
+  <h1>Welcome to BrainTooster!</h1>
+  <p>Click the button to test your brain:</p>
+  <button onclick="playGame()">Play</button>
   <script src="script.js"></script>
 </body>
 </html>
